# Dipl

./: Main.java
C++/: atomic.cpp  basic_spawn_join.cpp  basic_spawn_join_atomic.cpp  dynamic_thread_pool_variant.cpp  manual_mutex.cpp  static_thread_pool_variant.cpp  thread_local.cpp  thread_pool_variant.cpp
C++/TSSTP/: CMakeLists.txt  Mutex_protected.cpp  Mutex_protected.hpp  TSSTP.cpp  TSSTP.hpp  Thread_private.cpp  Thread_private.hpp  main.cpp  tags.cpp  tags.hpp  test_thread_private.cpp  thread_pool.hpp
Rust/: ownership_passing.rs
Rust/main/: Cargo.toml  how to build.txt
Rust/main/src/: main.rs
